# agave

./: CMakeLists.txt  README.md  setup.py
.github/workflows/: build_and_test.yml  tagged_master_release.yml
agave_app/: AppearanceSettingsWidget.cpp
agave_app/python/: CMakeLists.txt  pyagavemodule.cpp  pyrenderer.cpp  test.py
agave_python/: __init__.py
qtome/: main.cpp
qtome/python/: CMakeLists.txt  README.md  pyagavemodule.cpp  pyrenderer.cpp  test.py
renderlib/: CMakeLists.txt
renderlib/glsl/v330/: GLPTVolumeShader.cpp
